--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,18 +15,20 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-appear": "^1.3.26",
+    "react-loadingg": "^1.7.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1",
-    "vanilla-lazyload": "^17.1.2"
+    "react-sticky-box": "^0.9.3"
   },
   "scripts": {
     "start": "npm run build:css && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "tailwind build src/styles/index.css -o src/styles/main.css",
-    "watch:css": "tailwind build src/styles/index.css -o src/styles/main.css"
+    "build:css": "tailwind build src/assets/styles/index.css -o src/assets/styles/main.css",
+    "watch:css": "tailwind build src/assets/styles/index.css -o src/assets/styles/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
