--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react": "^16.13.1",
     "react-awesome-popover": "^6.1.1",
     "react-dom": "^16.13.1",
-    "react-image-appear": "^1.3.26",
     "react-perfect-scrollbar": "^1.5.8",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-simple-img": "^2.3.9",
     "react-skylight": "^0.5.1",
     "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
