--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
     "react-sticky-box": "^0.9.3",
+    "styled-components": "^5.1.1",
     "toasted-notes": "^3.2.0"
   },
   "scripts": {
